2003-12-08  Xavier Ordoquy <xordoquy@wanadoo.fr>

	* libplanner/Makefile.am: removed a tab.

2003-12-08  Richard Hult  <richard@imendio.com>

	* Makefile.am:
	* sql/Makefile.am:
	* configure.in: Add sql dir with the sql stuff.

2003-12-08  Richard Hult  <richard@imendio.com>

	* configure.in: Add gconf.

	* data/ui/main-window.ui: Fix a string.

	* libplanner/Makefile.am: Remove obsolete comment.
	
	* src/Makefile.am: Link postgres plugin with the pg libs.
	
	* src/planner-application.c:
	(planner_application_get_gconf_client):
	* src/planner-application.h: Add.

	* src/planner-sql-plugin.c: (sql_plugin_retrieve_db_values):
	Store/get values in gconf. Loosely based on patch from Bernardo
	Silveira.

2003-12-08  Richard Hult  <richard@imendio.com>

	* configure.in: Remove --with-html-dir, since gtk-doc.makefile
	handles that. Gets rid of duplicate --with-html-dir options.
	Add commented python checks, need to add this back.	

2003-12-04  Christian Neumair  <chris@gnome-de.org>

	* Makefile.am, po-libplanner/*:
	Kill po-libplanner. All translations now live in po.

	* configure.in:
	Ditto. Plus add Estonian (et), Mongolian (mn) and Kannada (kn) to
	ALL_LINGUAS.

2003-12-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* Makefile.am:
	Don't remove intltool-* on make clean, they are 
	generated at configure time.

	* src/Makefile.am:
	Fix parallel build.

2003-12-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* autogen.sh:
	Add support for GNOME2_DIR variable.

	* libplanner-1.pc.in:
	Use correct name for linking.

	* libplanner/Makefile.am:
	Fix library version.

2003-12-02  Frederic Crozat  <fcrozat@mandrakesoft.com>

	* libplanner/Makefile.am:
	* src/Makefile.am:
	Fix Postgresql compilation (add missing cflags).

2003-12-01  Richard Hult  <richard@imendio.com>

	* Release 0.11.

	* src/planner-task-tree.c (task_tree_parse_time_string): Fix
	invalid read and...
	(task_tree_get_unit_from_string): ...move i18n initialization
	here.
