@@ -20,8 +20,11 @@ aclocal.m4
 install-sh
 missing
 mkinstalldirs
-intltool-*
+intltool-merge
+intltool-update
+intltool-extract
 ltmain.sh
 autom4te*
 libplanner-1.pc
 planner.spec
+intltool-modules/XML/Parser/Style/OrigTree.pm
