@@ -9,16 +9,14 @@ SUBDIRS = \
 EXTRA_DIST = \
 	libplanner-1.pc			\
 	libplanner-1.pc.in		\
-	intltool-extract		\
-	intltool-merge			\
-	intltool-update			\
 	intltool-extract.in		\
 	intltool-merge.in		\
 	intltool-update.in		\
 	xmldocs.make			\
 	omf.make			\
 	planner.spec.in			\
-	planner.spec
+	planner.spec			\
+	intltool-modules/XML/Parser/Style/OrigTree.pm
 
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libplanner-1.pc
